# moegal-honyaku

./: .env.example  .gitignore  README.md  py3langid.py  pyproject.toml  requirements-cpu-paddle.txt  requirements-cpu.txt  requirements-cu126.txt  requirements-cu128.txt  requirements.txt  start-en.cmd  start.cmd  start.ps1  start.sh
app/: main.py
app/core/: custom_conf.py  env_sync.py  font_conf.py  logger.py
app/rendering/: __init__.py  auto_linebreak.py  render_adapter.py  text_render.py  utils.py
app/services/: inpainting_lama.py  mask_refinement.py  mit_detector.py  mit_ocr.py  mit_ocr_48px_native.py  mit_ocr_ctc_native.py  mtu_bridge_compat.py  mtu_inpaint_bridge.py  mtu_mask_refinement_bridge.py  mtu_runtime_paths.py  ocr.py  pic_process.py  translate_api.py  web_image_input.py  xpos_relative_position.py  yolo_obb_detector.py
assets/: models_manifest.txt
manga_translator/: __init__.py  __main__.py  args.py  config.py  custom_api_params.py  manga_translator.py  runtime_api_resolver.py  save.py  server_paths.py
manga_translator/colorization/: __init__.py  common.py  manga_colorization_v2.py  model_api_colorizer.py  prompt_loader.py
manga_translator/detection/: __init__.py  common.py  craft.py  ctd.py  dbnet_convnext.py  default.py  none.py  panel_finder.py  yolo_obb.py
manga_translator/inpainting/: __init__.py  booru_tagger.py  common.py  guided_ldm_inpainting.py  inpainting_aot.py  inpainting_attn.py  inpainting_lama.py  inpainting_lama_mpe.py  inpainting_sd.py  none.py  original.py  sd_hack.py
manga_translator/mask_refinement/: __init__.py  text_mask_utils.py
manga_translator/mode/: __init__.py  share.py  subprocess_manager.py  ws.py
manga_translator/ocr/: __init__.py  common.py  model_32px.py  model_48px.py  model_48px_ctc.py  model_api_ocr.py  model_manga_ocr.py  model_ocr_large.py  model_paddleocr.py  model_paddleocr_vl.py  paddleocr_vl_patcher.py  prompt_loader.py
manga_translator/rendering/: auto_linebreak.py  ballon_extractor.py  model_api_renderer.py  prompt_loader.py  text_render.py  text_render_eng.py  text_render_hq.py  text_render_pillow_eng.py
manga_translator/server/: __init__.py  args.py  export_utils.py  instance.py  main.py  myqueue.py  request_extraction.py  runtime_api.py  sent_data_internal.py  server_utils.py  streaming.py  to_json.py
manga_translator/textline_merge/: __init__.py
manga_translator/translators/: __init__.py  common.py  config_gpt.py  gemini.py  gemini_hq.py  keys.py  none.py  openai.py  openai_hq.py  original.py  prompt_loader.py  sakura.py
manga_translator/upscaling/: __init__.py  common.py  (+6 more)
(+145 files in other folders)
