[project]
name = "moegal-honyaku"
version = "0.1.0"
description = "Translate Japanese manga into Chinese."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs>=2.6.0",
    "aiohttp>=3.9.0",
    "aiosignal>=1.3.0",
    "annotated-types>=0.7.0",
    "anyio>=4.5.0",
    "attrs>=24.0.0",
    "certifi>=2024.0.0",
    "charset-normalizer>=3.3.0",
    "click>=8.1.0",
    "colorama>=0.4.6",
    "colorlog>=6.8.0",
    "contourpy>=1.2.0",
    "cycler>=0.12.0",
    "distro>=1.9.0",
    "dnspython>=2.6.0",
    "email_validator>=2.1.0",
    "fastapi>=0.115.0",
    "filelock>=3.15.0",
    "fire>=0.7.0",
    "fonttools>=4.50.0",
    "frozenlist>=1.4.0",
    "fsspec>=2024.0.0",
    "fugashi>=1.5.0",
    "h11>=0.14.0",
    "httpcore>=1.0.0",
    "httptools>=0.6.0",
    "httpx>=0.27.0",
    "huggingface-hub>=0.28.0",
    "idna>=3.6",
    "jaconv>=0.4.0",
    "Jinja2>=3.1.0",
    "jiter>=0.8.0",
    "kiwisolver>=1.4.0",
    "loguru>=0.7.2",
    "manga-ocr>=0.1.12",
    "markdown-it-py>=3.0.0",
    "MarkupSafe>=3.0.0",
    "matplotlib>=3.9.0",
    "mdurl>=0.1.0",
    "mpmath>=1.3.0",
    "multidict>=6.0.0",
    "networkx>=3.2",
    "numpy>=1.26.0",
    "openai>=1.50.0",
    "opencv-python>=4.9.0",
    "packaging>=24.0",
    "paddleocr>=2.7.0",
    "paddlepaddle>=2.6.0",
    "pandas>=2.2.0",
    "pillow>=10.0.0",
    "propcache>=0.2.0",
    "psutil>=6.0.0",
    "py-cpuinfo>=9.0.0",
    "pydantic>=2.9.0",
    "Pygments>=2.18.0",
    "pyparsing>=3.1.0",
    "pyperclip>=1.8.0",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "pytz>=2024.0",
    "PyYAML>=6.0",
    "regex>=2024.0.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "safetensors>=0.4.0",
    "scipy>=1.13.0",
    "setuptools>=70.0.0",
    "shellingham>=1.5.0",
    "six>=1.16.0",
    "sniffio>=1.3.0",
    "starlette>=0.40.0",
    "sympy>=1.12",
    "termcolor>=2.4.0",
    "tokenizers>=0.20.0",
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "torchaudio>=2.3.0",
    "transformers>=4.45.0",
    "typer>=0.12.0",
    "typing_extensions>=4.10.0",
    "tzdata>=2024.0",
    "ultralytics>=8.2.0",
    "unidic-lite>=1.0.8",
    "urllib3>=2.2.0",
    "uvicorn>=0.30.0",
    "watchfiles>=0.22.0",
    "websockets>=12.0",
    "yarl>=1.17.0",
]

[tool.uv]
package = false
environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'win32'",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
